Font and Spacing fix

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,4 +1,6 @@
 
+@import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro&display=swap');
+
 html {
     background: linear-gradient(90deg, #91ebf3, #e23247);
 }
@@ -62,6 +64,7 @@ main {
     flex-direction: column;
     background: #ffffff;
     padding: 5%;
+    position: static;
     border-radius: 5px;
     flex-wrap: wrap;
 }
@@ -88,10 +91,12 @@ main {
 .about-info {
     display: flex;
     flex-direction: row;
-    margin-top: 4%;
+    margin-top: 5%;
+    position: relative;;
 }
 
 .career-info {
+    display: block;
     width: 50%;
 }
 
